--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,4 @@
-baseURL = "http://example.org/"
-languageCode = "en-us"
+baseURL = "https://ycopy-icopy.netlify.com/"
+languageCode = "ja"
 title = "My New Hugo Site"
+theme = "robust"
