--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/robust"]
 	path = themes/robust
 	url = https://github.com/dim0627/hugo_theme_robust.git
+[submodule "themes/white"]
+	path = themes/white
+	url = https://github.com/zhaohuabing/hugo-theme-cleanwhite.git
